@@ -24,7 +24,7 @@ Requirements
 
 ----
 
-1. Python 2.7+, 3.5+
+1. Python 3.5+
 2. Django 1.8+
 3. Django Auth contrib enabled
 4. Django Admin contrib enabled (optional)
